--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,41 @@
+audioread==3.0.1
 blinker==1.9.0
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
 click==8.1.8
+decorator==5.1.1
+ffmpeg-python==0.2.0
+filelock==3.17.0
 Flask==3.1.0
+fsspec==2025.2.0
+future==1.0.0
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
+joblib==1.4.2
+lazy_loader==0.4
+librosa==0.10.2.post1
+llvmlite==0.44.0
 MarkupSafe==3.0.2
+mpmath==1.3.0
+msgpack==1.1.0
+networkx==3.4.2
+numba==0.61.0
+numpy==2.1.3
+packaging==24.2
+platformdirs==4.3.6
+pooch==1.8.2
+pycparser==2.22
+requests==2.32.3
+scikit-learn==1.6.1
+scipy==1.15.2
+setuptools==75.8.0
+soundfile==0.13.1
+soxr==0.5.0.post1
+sympy==1.13.1
+threadpoolctl==3.5.0
+torch==2.6.0
+typing_extensions==4.12.2
+urllib3==2.3.0
 Werkzeug==3.1.3
