--- a/spark-frontend/package.json
+++ b/spark-frontend/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "react-slick": "^0.30.3",
+    "recharts": "^2.15.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
