updating backend dependencies

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,9 @@
 absl-py==2.1.0
+alembic==1.14.1
 astunparse==1.6.3
 attrs==25.1.0
-beautifulsoup4==4.13.3
 audioread==3.0.1
+beautifulsoup4==4.13.3
 blinker==1.9.0
 certifi==2025.1.31
 cffi==1.17.1
@@ -10,14 +11,20 @@ charset-normalizer==3.4.1
 click==8.1.8
 contourpy==1.3.1
 cycler==0.12.1
+decorator==5.1.1
 deepface==0.0.93
 docutils==0.21.2
+ffmpeg-python==0.2.0
 filelock==3.17.0
 fire==0.7.0
 Flask==3.1.0
 Flask-Cors==5.0.0
+Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
 flatbuffers==25.2.10
 fonttools==4.56.0
+fsspec==2025.2.0
+future==1.0.0
 gast==0.6.0
 gaze==0.0.3
 gaze-tracking==0.0.1
@@ -26,12 +33,6 @@ google-pasta==0.2.0
 grpcio==1.70.0
 gunicorn==23.0.0
 h5py==3.13.0
-decorator==5.1.1
-ffmpeg-python==0.2.0
-filelock==3.17.0
-Flask==3.1.0
-fsspec==2025.2.0
-future==1.0.0
 idna==3.10
 itsdangerous==2.2.0
 jax==0.5.0
@@ -40,8 +41,12 @@ Jinja2==3.1.5
 joblib==1.4.2
 keras==3.8.0
 kiwisolver==1.4.8
+lazy_loader==0.4
 libclang==18.1.1
+librosa==0.10.2.post1
+llvmlite==0.44.0
 lz4==4.4.3
+Mako==1.3.9
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -49,8 +54,12 @@ matplotlib==3.10.0
 mdurl==0.1.2
 mediapipe==0.10.21
 ml-dtypes==0.4.1
+mpmath==1.3.0
+msgpack==1.1.0
 mtcnn==1.0.0
 namex==0.0.8
+networkx==3.4.2
+numba==0.61.0
 numpy==1.26.4
 opencv-contrib-python==4.11.0.86
 opencv-python==4.11.0.86
@@ -59,7 +68,10 @@ optree==0.14.0
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
+platformdirs==4.3.6
+pooch==1.8.2
 protobuf==4.25.6
+psycopg2==2.9.10
 pycparser==2.22
 Pygments==2.19.1
 pyparsing==3.2.1
@@ -69,43 +81,28 @@ pytz==2025.1
 requests==2.32.3
 retina-face==0.0.17
 rich==13.9.4
+scikit-learn==1.6.1
 scipy==1.15.2
 sentencepiece==0.2.0
 six==1.17.0
 sounddevice==0.5.1
+soundfile==0.13.1
 soupsieve==2.6
+soxr==0.5.0.post1
+SQLAlchemy==2.0.38
 statistics==1.0.3.5
+sympy==1.13.1
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
 tensorflow==2.18.0
 tensorflow-io-gcs-filesystem==0.37.1
 termcolor==2.5.0
 tf_keras==2.18.0
+threadpoolctl==3.5.0
+torch==2.6.0
 tqdm==4.67.1
 typing_extensions==4.12.2
 tzdata==2025.1
-lazy_loader==0.4
-librosa==0.10.2.post1
-llvmlite==0.44.0
-MarkupSafe==3.0.2
-mpmath==1.3.0
-msgpack==1.1.0
-networkx==3.4.2
-numba==0.61.0
-packaging==24.2
-platformdirs==4.3.6
-pooch==1.8.2
-pycparser==2.22
-requests==2.32.3
-scikit-learn==1.6.1
-scipy==1.15.2
-setuptools==75.8.0
-soundfile==0.13.1
-soxr==0.5.0.post1
-sympy==1.13.1
-threadpoolctl==3.5.0
-torch==2.6.0
-typing_extensions==4.12.2
 urllib3==2.3.0
 Werkzeug==3.1.3
 wrapt==1.17.2
