--- a/spark-frontend/package.json
+++ b/spark-frontend/package.json
@@ -19,6 +19,7 @@
     "next": "^15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-media-recorder": "^1.7.1",
     "react-router-dom": "^7.2.0",
     "react-slick": "^0.30.3",
     "recharts": "^2.15.1",
