--- a/spark-frontend/package.json
+++ b/spark-frontend/package.json
@@ -15,6 +15,8 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
+    "date-fn": "^0.0.2",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.4.7",
     "next": "^15.1.7",
     "react": "^19.0.0",
