--- a/spark-frontend/package.json
+++ b/spark-frontend/package.json
@@ -25,7 +25,8 @@
     "react-router-dom": "^7.2.0",
     "react-slick": "^0.30.3",
     "recharts": "^2.15.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "typeface-fira-code": "^1.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
