--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,7 @@
 absl-py==2.1.0
 alembic==1.14.1
+annotated-types==0.7.0
+anyio==4.8.0
 astunparse==1.6.3
 attrs==25.1.0
 audioread==3.0.1
@@ -13,7 +15,10 @@ contourpy==1.3.1
 cycler==0.12.1
 decorator==5.1.1
 deepface==0.0.93
+distro==1.9.0
 docutils==0.21.2
+dotenv==0.9.9
+exceptiongroup==1.2.2
 ffmpeg-python==0.2.0
 filelock==3.17.0
 fire==0.7.0
@@ -32,12 +37,18 @@ gdown==5.2.0
 google-pasta==0.2.0
 grpcio==1.70.0
 gunicorn==23.0.0
+h11==0.14.0
 h5py==3.13.0
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
+imageio==2.37.0
+imageio-ffmpeg==0.6.0
 itsdangerous==2.2.0
 jax==0.5.0
 jaxlib==0.5.0
 Jinja2==3.1.5
+jiter==0.8.2
 joblib==1.4.2
 keras==3.8.0
 kiwisolver==1.4.8
@@ -54,6 +65,8 @@ matplotlib==3.10.0
 mdurl==0.1.2
 mediapipe==0.10.21
 ml-dtypes==0.4.1
+more-itertools==10.6.0
+moviepy==2.1.2
 mpmath==1.3.0
 msgpack==1.1.0
 mtcnn==1.0.0
@@ -61,23 +74,32 @@ namex==0.0.8
 networkx==3.4.2
 numba==0.61.0
 numpy==1.26.4
+openai==1.64.0
+openai-whisper==20240930
 opencv-contrib-python==4.11.0.86
 opencv-python==4.11.0.86
 opt_einsum==3.4.0
 optree==0.14.0
 packaging==24.2
 pandas==2.2.3
-pillow==11.1.0
+pillow==10.4.0
 platformdirs==4.3.6
 pooch==1.8.2
+proglog==0.1.10
 protobuf==4.25.6
 psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
+pydub==0.25.1
 Pygments==2.19.1
 pyparsing==3.2.1
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2025.1
+regex==2024.11.6
 requests==2.32.3
 retina-face==0.0.17
 rich==13.9.4
@@ -85,6 +107,7 @@ scikit-learn==1.6.1
 scipy==1.15.2
 sentencepiece==0.2.0
 six==1.17.0
+sniffio==1.3.1
 sounddevice==0.5.1
 soundfile==0.13.1
 soupsieve==2.6
@@ -99,10 +122,12 @@ tensorflow-io-gcs-filesystem==0.37.1
 termcolor==2.5.0
 tf_keras==2.18.0
 threadpoolctl==3.5.0
+tiktoken==0.9.0
 torch==2.6.0
 tqdm==4.67.1
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
 Werkzeug==3.1.3
+whisper==1.1.10
 wrapt==1.17.2
