--- a/spark-frontend/package.json
+++ b/spark-frontend/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^12.4.7",
     "next": "^15.1.7",
     "react": "^19.0.0",
+    "react-confetti": "^6.2.3",
     "react-dom": "^19.0.0",
     "react-media-recorder": "^1.7.1",
     "react-router-dom": "^7.2.0",
